@@ -43,6 +43,9 @@ ChangeLog for PyLint
     * #112698: fixed crashes related to non-inferable __all__ attributes and
       invalid __all__ contents (patch by Torsten Marek)
 
+    * Include full warning id for I0020 and I0021 and make sure to flush
+      warnings after each module, not at the end of the pylint run.
+      (patch by Torsten Marek)
 
 2012-10-05  --  0.26.0
     * #106534: add --ignore-imports option to code similarity checking
